setup devise and fixing posts for users

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,13 @@
 <% if @posts.any? %> 
 	<% @posts.each do |post| %> 
-		<%= image_tag post.image.url(:thumb), class: 'uploaded-pic' %>
+
+		<% if post.image.present? %>
+			<%= image_tag post.image.url(:thumb), class: 'uploaded-pic' %>
+		<% end %>
+
 		<h2><%= post.title %></h2><br> 
 		<%= post.description %> <br>
+		<p>Posted by: <%= post.user.email %></p>
 	<% end %>
 	<% else %>
 		No posts yet
