--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,39 @@
-<% if @posts.any? %> 
-	<% @posts.each do |post| %> 
-
-		<% if post.image.present? %>
-			<%= image_tag post.image.url(:thumb), class: 'uploaded-pic' %>
-		<% end %>
-
-		<h2><%= post.title %></h2><br> 
-		<%= post.description %> <br>
-		<p>Posted by: <%= post.user.email %></p>
+<div class="container">
+	<% unless signed_in? %>
+	<div class="jumbotron">
+	      <div class="container">
+	        <h1>Welcome to my version of Instagram</h1>
+	        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+	        <p>
+	        	<%= link_to 'Sign up >>', new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	        </p>
+	      </div>
+	    </div>
 	<% end %>
-	<% else %>
-		No posts yet
-<% end %>
+	<% if @posts.any? %> 
+		<div class="row">
+			<% @posts.each do |post| %> 
+				<div class="col-md-4">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title"><%= post.title %></h3>
+						</div>
+						<div class="panel-body">
+							<% if post.image.present? %>
+								<%= image_tag post.image.url(:thumb), class: 'uploaded-pic' %>
+							<% end %>
+							<%= post.description %> 							
+    					</div>
+							<div class="panel-footer">
+								<p>Posted by: <%= post.user.email %></p>
+							</div>
+						</div>						
+					</div>
+				</div>
+			<% end %>
+		<% else %>
+			No posts yet
+	<% end %>
 
-<%= link_to "Create a post", new_post_path %>
-
+	<%= link_to "Create a post", new_post_path, class: "btn btn-success btn-lg" %>
+</div>
