--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,35 @@
 	</head>
 
 	<body>
+    <% unless signed_in? %>
+      <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Instagramay</a>
+            </div>
+            <div class="navbar-collapse collapse">
+            	<%= form_for(User.new, as: :user, url: session_path(:user), html: { class: "navbar-form navbar-right" }) do |f| %>
+      			
+      			<div class="form-group">	
+      				<%= f.email_field :email, placeholder: "Email", class: "form-control" %>
+      			</div>
+      			
+      			<div class="form-group">
+        			<%= f.password_field :password, placeholder: "Password", class: "form-control" %>
+        		</div>
 
+      			<%= f.button "Sign in", class: "btn btn-success" %>
+    			<% end %>
+    		</div>
+    	</div>
+    </div>
+  <% else %>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -27,26 +55,15 @@
           <a class="navbar-brand" href="#">Instagramay</a>
         </div>
         <div class="navbar-collapse collapse">
-        	<%= form_for(User.new, as: :user, url: session_path(:user), html: { class: "navbar-form navbar-right" }) do |f| %>
-  			
-  			<div class="form-group">	
-  				<%= f.email_field :email, placeholder: "Email", class: "form-control" %>
-  			</div>
-  			
-  			<div class="form-group">
-    			<%= f.password_field :password, placeholder: "Password", class: "form-control" %>
-    		</div>
+          Welcome: <%= current_user.email %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  
+  <%= yield %>	
 
-  			<%= f.button "Sign in", class: "btn btn-success" %>
-			<% end %>
-		</div>
-	</div>
-</div>
-
-
-      <%= yield %>	
-
-      <div class= "container">
+    <div class= "container">
       <footer>
         <p>&copy; Fitsum 2014</p>
       </footer>
