--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,8 +21,13 @@
 						<div class="panel-body">
 							<% if post.image.present? %>
 								<%= image_tag post.image.url(:thumb), class: 'uploaded-pic' %>
-								<%= post.description %> 
-							<% end %>							
+							<% end %>
+							<p><%= post.description %></p> 
+							<p>
+								<% post.tags.each do |tag| %>
+									<%= link_to tag.name, '#' %>
+								<% end %>
+							</p>							
     					</div>
 						<div class="panel-footer">
 								<p>Posted by: <%= post.user.email %></p>
