--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,6 +13,11 @@
     <%= f.label :image %><br>
     <%= f.file_field :image %>
   </p>
+
+  <p>
+    <%= f.label :tag_names, 'Tags' %><br>
+    <%= f.text_field :tag_names %>
+  </p>
  
   <p>
     <%= f.submit :'Post it'%>
