--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,36 +10,18 @@
 	      </div>
 	    </div>
 	<% end %>
-	<% if @posts.any? %> 
-		<div class="row">
-			<% @posts.each do |post| %> 
-				<div class="col-md-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title"><%= post.title %></h3>
-						</div>
-						<div class="panel-body">
-							<% if post.image.present? %>
-								<%= image_tag post.image.url(:thumb), class: 'uploaded-pic' %>
-							<% end %>
-							<p><%= post.description %></p> 
-							<p>
-								<% post.tags.each do |tag| %>
-									<%= link_to tag.name, '#' %>
-								<% end %>
-							</p>							
-    					</div>
-						<div class="panel-footer">
-								<p>Posted by: <%= post.user.email %></p>
-						</div>
-					</div>						
+<div class="container">
+	<% if @posts.any? %>
+		<% @posts.each do |post| %> 	
+				<div class="row">
+					<%= render post %>
 				</div>
-			<% end %>
-		</div>
+		<% end %>
 	<% else %>
 		No posts yet
 	<%end%>
 
+</div>
 
 	<%= link_to "Create a post", new_post_path, class: "btn btn-success btn-lg" %>
 </div>
