--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,7 +16,7 @@
 
   <p>
     <%= f.label :tag_names, 'Tags' %><br>
-    <%= f.text_field :tag_names %>
+    <%= f.text_field :tag_names, data: {role: 'tagsinput'} %>
   </p>
  
   <p>
