working with gmaps without test

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -12,7 +12,11 @@
 				<% post.tags.each do |tag| %>
 					<%= link_to tag.name, tag_path(tag) %>
 				<% end %>
-			</p>							
+			</p>
+			<% unless post.address.blank? %>
+				<%= link_to 'Map', post_map_path(post), class: 'btn btn-success' %>
+			<% end %>
+										
 		</div>
 		<div class="panel-footer">
 				<p>Posted by: <%= post.user.email %></p>
