--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     
     <title>Instagramay</title>
 		<%= stylesheet_link_tag    'application', media: 'all' %>
+    <script src='http://maps.google.com/maps/api/js?sensor=true'></script> 
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 		<%= csrf_meta_tags %>
    	
