--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,10 @@
     <%= f.text_area :description %>
   </p>
 
+  <p>
+    <%= f.label :address %><br>
+    <%= f.text_area :address %>
+  </p>
     <p>
     <%= f.label :image %><br>
     <%= f.file_field :image %>
