--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,28 +40,23 @@
 
       			<%= f.button "Sign in", class: "btn btn-success" %>
     			<% end %>
+
     		</div>
     	</div>
     </div>
   <% else %>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Instagramay</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <% user = current_user || current_admin %>
-          Welcome: <%= user.email %>
+      <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Instagramay</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "label label-success" "nav navbar-right" %>
+          </div>
         </div>
       </div>
-    </div>
-    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-success" %>
+
+
   <% end %>
   
   <%= notice %>
