--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -7,6 +7,6 @@
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.application.secrets.stripe_public_key %>"
-          data-description="A month's subscription"
+          data-description= "<%="Purchase #{@post.title.upcase}" %>"
           data-amount="500"></script>
 <% end %>
