use of Factory girl started

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,9 +13,9 @@
 					<%= link_to tag.name, tag_path(tag) %>
 				<% end %>
 			</p>
-			<p><%= link_to 'Buy', new_post_charge_path(post), class: 'btn btn-success' %></p>
+			<p><%= link_to 'Buy', new_post_charge_path(post), class: 'btn btn-success buy-btn' %></p>
 			<% unless post.address.blank? %>
-				<%= link_to 'Map', post_map_path(post), class: 'btn btn-success' %>
+				<%= link_to 'Map', post_map_path(post), class: 'btn btn-success map-btn' %>
 			<% end %>
 			<%= link_to "❤ #{post.likes.count}", post_likes_path(post), class: 'btn btn-danger like-btn', data: {'post-id' => post.id} %>							
 		</div>
